Dodany endpoint zwracający po nazwie lub części nazwy leku
