# backend/swagger.yaml
@@ -198,6 +198,44 @@ paths:
                       type: string
         500:
           description: Błąd serwera
+  /leki/search/{query}:
+    get:
+      summary: Wyszukuje leki na podstawie zapytania
+      tags:
+        - Leki
+      parameters:
+        - in: path
+          name: query
+          schema:
+            type: string
+          required: true
+          description: Zapytanie wyszukiwania
+      responses:
+        200:
+          description: Lista leków pasujących do zapytania
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    nazwa:
+                      type: string
+                    nazwa_powszechna:
+                      type: string
+                    substancja:
+                      type: string
+                    moc:
+                      type: string
+                    droga_podania:
+                      type: string
+                    kraj_pochodzenia:
+                      type: string
+        500:
+          description: Błąd serwera
   /lek/{id}:
     get:
       summary: Zwraca lek na podstawie id
